Change Google Tag Manager ID in ga4_d1.html
Updated Google Tag Manager ID for tracking.

--- a/ga4_d1.html
+++ b/ga4_d1.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QK0W82LHSQ"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5KMS00N1D7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-QK0W82LHSQ');
+    
+  gtag('config', 'G-5KMS00N1D7');
 </script>
     
     <meta charset="UTF-8">
@@ -57,4 +57,5 @@
   </article>
 </body>
 </html>
+
 
