--- a/ga4_d1.html
+++ b/ga4_d1.html
@@ -2,13 +2,13 @@
 <html lang="ko">
 <head>
 <!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5KMS00N1D7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-    
   gtag('config', 'G-5KMS00N1D7');
 </script>
     
@@ -57,5 +57,6 @@
   </article>
 </body>
 </html>
+
 
 
